fix: arrow jumping

--- a/02-clock/style.css
+++ b/02-clock/style.css
@@ -54,8 +54,8 @@ h6 {
   border: 20px solid #fff;
   border-radius: 50%;
 
-  box-shadow: 0 0 0 4px rgba(0, 0, 0, 0.1), inset 0 0 0 3px #efefef,
-    inset 0 0 10px black, 0 0 10px rgba(0, 0, 0, 0.2);
+  box-shadow: 0 0 5px 5px rgb(0, 0, 0, 0.2),
+    inset 0 0 20px 20px rgba(0, 0, 0, 0.2);
 
   position: relative;
 }
@@ -67,6 +67,20 @@ h6 {
   transform: translateY(-3px);
 
   position: relative;
+}
+
+.round {
+  width: 1.7rem;
+  height: 1.7rem;
+
+  background-color: rgb(54, 15, 180);
+  border-radius: 50%;
+
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  z-index: 1;
 }
 
 /*hand
